# mfix

./: Bug_Fixes  CHANGES  DISCLAIMER  Makefile.am  Makefile.in  NOTICE  README.md  configure  configure.ac  configure_mfix  readme  vtp.patch
benchmarks/tfm/: readme.txt
build-aux/: Makefile.usr  Makefile.usr.am  Makefile.usr.in  fdep  fdep.in  fortran-depcomp  netcdf.m4  netcdff.m4  runtests.sh  test.sh  update-usrdeps
config/: build_Makefile.sh  build_post_Makefile.sh  mpi_fun.sh  netcdf.sh  parse_args.sh  req_usr.sh  rxn_preproc.sh  set_post_incs.sh  swap_build.sh  sys_comp.sh  sys_info.sh
config/compilers/: gcc_default.sh  gnu_mac_os.sh  intel_default.sh  intel_mac_os.sh  nersc_hopper_cray.sh  nersc_hopper_gnu.sh  nersc_hopper_intel.sh  nersc_hopper_pgi.sh  portland_default.sh  portland_mac_os.sh  sbeuc_gcc-46.sh  win_gnu.sh
legacy_tests/: MFIX_Tests_Benchmarking.html  Readme-tests  collect_data  in  run  run_serial  script.awk
legacy_tests/Added_Mass_LiftForce/: source_u_g.f  source_u_s.f
legacy_tests/FluidBed_DES_3D/: README  geometry.stl
legacy_tests/HYS_drag_tutorial/: Readme
legacy_tests/adiabaticFlame/: usr3.f  usr_rates.f
legacy_tests/chi-scheme/: usr_rates.f
legacy_tests/conduction2/: solve_energy_eq.f
legacy_tests/drying/: usr3.f  usr_rates.f
legacy_tests/hopper/: readme.txt
legacy_tests/ozone/: usr_rates.f
legacy_tests/phase_change/: usr_rates.f
legacy_tests/rotary-drum/: bodyforce_mod.f
legacy_tests/thermo/: usr0.f  usr3.f  usr_rates.f
legacy_tests/tsuji/: toleranc_mod.f
model/: BLAS.f  DGTSV.f  ODEPACK.F  accum_resid.f  adjust_a_u_g.f  adjust_a_u_s.f  adjust_a_v_g.f  adjust_a_v_s.f  adjust_a_w_g.f  adjust_a_w_s.f  adjust_eps.f  adjust_leq.f  adjust_theta.f  allocate_arrays.f  ambm_mod.f  b_m_p_star.f  bc_mod.f  bc_phi.f  bc_theta.f  bodyforce_mod.f  cal_d.f  calc_cell.f  calc_coeff.f  calc_d_e.f  calc_d_n.f  calc_d_t.f  calc_dif_g.f  calc_dif_s.f  calc_e.f  calc_gama.f  calc_grbdry.f  calc_h.f  calc_k_cp.f  calc_k_g.f  calc_k_s.f  calc_mflux.f  calc_mu_g.f  calc_mu_s.f  calc_outflow.f  calc_p_star.f  (+256 more)
model/GhdTheory/: adjust_eps_ghd.f  bulk_viscosity.f  calc_d_ghd.f  calc_external_forces.f  calc_nflux.f  chi_ij_GHD.f  cooling_rate.f  cooling_rate_tc.f  dufour_coeff.f  ghd.f  ghdmassflux.f  ghdtheory_mod.f  mass_mobility.f  ordinary_diff.f  partial_elim_ghd.f  pressure.f  shear_viscosity.f  source_ghd_granular_energy.f  thermal_conductivity.f  thermal_diffusivity.f  thermal_mobility.f  transport_coeff_ghd.f
model/cartesian_grid/: CG_set_bc0.f  CG_set_outflow.f  CG_source_u_g.f  CG_source_u_s.f  CG_source_v_g.f  CG_source_v_s.f  CG_source_w_g.f  CG_source_w_s.f  allocate_cut_cell_arrays.f  allocate_dummy_cut_cell_arrays.f  calc_vort_out.f  cartesian_grid_init_namelist.f  check_data_cartesian.f  cut_cell_preprocessing.f  cutcell_mod.f  dashboard_mod.f  deallocate_cut_cell_arrays.f  define_quadrics.f  dmp_cartesian.f  eval_usr_fct.f  get_alpha.f  get_connectivity.f  get_cut_cell_flags.f  get_cut_cell_volume_area.f  get_delh.f  get_master.f  get_poly_data.f  get_stl_data.f  polygon_mod.f  progress_bar_mod.f  quadric_mod.f  set_Odxyz.f  stl_mod.f  update_dashboard.f  vtk_mod.f  vtk_out.f  write_progress_bar.f
model/check_data/: check_axis.f  check_bc_dem.f  check_bc_geometry.f  check_bc_inflow.f  check_bc_outflow.f  check_bc_pic.f  check_bc_walls.f  check_boundary_conditions.f  check_chemical_rxns.f  check_dmp_prereqs.f  check_gas_phase.f  check_geometry.f  check_geometry_prereqs.f  check_ic_common_discrete.f  check_ic_dem.f  check_ic_mppic.f  check_initial_conditions.f  check_internal_surfaces.f  check_numerics.f  check_odepack_stiff_chem.f  check_output_control.f  check_point_sources.f  check_run_control.f  check_solids_common_all.f  check_solids_common_discrete.f  check_solids_continuum.f  check_solids_dem.f  check_solids_model_prereqs.f  check_solids_mppic.f  check_solids_phases.f
model/chem/: stiff_chem_dbg_mod.f  stiff_chem_maps_mod.f  stiff_chem_mod.f  stiff_chem_rrates.f  stiff_chem_stats_mod.f
model/des/: calc_collision_wall_mod.f  calc_des_2fluid.f  calc_drag_des.f  calc_epg_des.f  calc_force_dem.f  calc_gamma_des.f  calc_grad_des.f  calc_interp_weights.f  calc_pg_grad.f  calc_rrates_des.f  calc_thermo_des.f  cfassign.f  cffctowall.f  cfnewvalues.f  cfrelvel.f  cfslide.f  cfupdateold.f  cfwallcontact.f  cfwallposvel.f  check_cell_movement.f  comp_mean_fields.f  comp_mean_fields0.f  comp_mean_fields1.f  derived_types_mod.f  des_allocate_mod.f  des_bc_mod.f  des_cluster_mod.f  des_functions.f  des_granular_temperature.f  des_init_arrays.f  des_init_namelist.f  des_physical_prop.f  des_reaction_model.f  des_rxns_mod.f  des_thermo_cond_mod.f  des_thermo_conv.f  des_thermo_mod.f  des_thermo_newvalues.f  des_thermo_rad.f  des_time_march.f  (+62 more)
model/dmp_modules/: compar_mod.f  dbg_util_mod.f  debug_mod.f  gridmap_mod.f  mpi_utility_mod.f  parallel_mpi_mod.f  sendrecv3_mod.f  sendrecv_mod.f
model/dqmom/: gaussj.f  odeint.f  rkck.f  rkqs.f  source_population_eq.f  usr_dqmom.f
model/include/: boundary_conditions.inc  cartesian_grid_namelist.inc  chem_equations.inc  desnamelist.inc  dmp_batch_control.inc  fun_avg.inc  functions.inc  gas_phase.inc  geometry.inc  initial_conditions.inc  internal_surfaces.inc  legacy.inc  netcdf.inc  numerical_params.inc  output_control.inc  physical_params.inc  (+10 more)
post_mfix/: any_more_data.f  calc_cell2.f  calc_corr_01.f  calc_corr_type_1.f  calc_distance.f  calc_dpody.f  calc_ep_g.f  calc_quantities.f  calc_ro_g.f  calc_vol.f  correl_mod.f  deallocate_arrays.f  examine_data.f  f_init_data.f  file_handle.f  finit.f  flow_gx.f  flow_gy.f  flow_gz.f  flow_sx.f  flow_sy.f  flow_sz.f  functions_mod.f  gas_flux.f  get_file_name.f  get_file_status.f  get_index.f  get_location.f  get_mu_s.f  get_same_time.f  get_selection.f  get_substr.f  granular_qty.f  header_main.f  ik_avg.f  ik_avg_out.f  interp_res.f  main_f.f  ornl_corr.f  ornl_corr_c.f  (+36 more)
regression_tests/: nightly_results.html
tools/: mms.f90  mms_post.f90  sysinfo.sh
tutorials/: MFIX_Tutorials_Benchmarking.html  collect_data  run_serial
(+312 files in other folders)
